--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin:20px;
+            margin:1px;
         }
         .container {
             width: 80%;
@@ -31,7 +31,8 @@
         }
         label {
             display: block;
-            margin-bottom: 5px;
+            margin-bottom: 15px;
+            font-size: 30px;
         }
         input {
             width: 100%;
