--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
         <h3>Modificações Estéticas:</h3>
         <button onclick="addItem('Categoria2', 'Pintura Primária', 5000)">Pintura Primária | R$5K</button>
         <button onclick="addItem('Categoria2', 'Pintura Secundária', 5000)">Pintura Secundária | R$5K</button>
+        <button onclick="addItem('Categoria2', 'Pintura Fumaça do Pneu', 5000)">Pintura Fumaça do Pneu | R$5K</button>
+        <button onclick="addItem('Categoria2', 'Pintura Roda', 5000)">Pintura Roda | R$5K</button>
         <button onclick="addItem('Categoria2', 'Janelas', 5000)">Janelas | R$5K</button>
         <button onclick="addItem('Categoria2', 'Fumaça do Pneu', 5000)">Fumaça do Pneu | R$5K</button>
         <button onclick="addItem('Categoria2', 'Placa', 5000)">Placa | R$5K</button>
